NavBar.js: corrected the link to the hidden contact page; ... Updated this on Contact-Page.js as well, we don't want a 404 page; ... Contact-Page.js: re-did contact page-- added in firebase configuration, which is WIP ; GoogleAPI.js: I am unable to see the API so I created a mock content to display what others can see so I can edit ; ... Signup/Login.js: fixed form length issue-- was related to static height size from prior ; Homepage.css: fixed padding that scrolled off page ; GoogleAPI.css: added in styling to destination bulletpoints ; Global-Styles.css: hid scroll for all pages to make site clean/hide any n00b ui design flaws--whoopies ; Contact-Page.css: completely new css file; added to the corresponding js file; aligned style to others

--- a/src/components/css/GoogleAPI.css
+++ b/src/components/css/GoogleAPI.css
@@ -18,3 +18,24 @@
     font-family: Verdana;
     color: #312E29;
 }
+
+.boxAPI ul {
+    font-size: 130%;
+    margin-top: 0%;
+    padding-top: 0%;
+    font-family: Verdana;
+    color: #312E29;
+    text-align: left;
+    max-width: 70%; /* maximum width */
+    margin: 0 auto; /* center horizontally */
+    list-style-position: inside; /* move the bullet point inside */
+    line-height: 1.5;
+  }
+  
+
+.anotherBoxAPI {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
